--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <h1>Welcome to Etch-a-Sketch</h1>
-    <p>Hover your cursor over the grid to draw!</p>
+    <h1>Etch-a-Sketch</h1>
     <button type="button" onclick="customFields()">Click to create new grid</button>
     <div class="container"></div>
 </body>
